...
            }
        }
    }
    
    func showLogoutAlert() {
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )

        let yesAction = UIAlertAction(title: "Да", style: .default) { _ in
            self.logout()
        }

        let noAction = UIAlertAction(title: "Нет", style: .default, handler: nil)

        alert.addAction(yesAction)
...
