...
                                    <constraint firstAttribute="width" constant="60" id="g51-Cw-N6y"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gbN-YG-Pom">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate" label="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="MFG-dw-SZV"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                    <segue destination="GlR-CY-Pfp" kind="presentation" identifier="ShowWebView" modalPresentationStyle="fullScreen" id="9T7-j7-PMB"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="QTm-S8-pHL"/>
                        <color key="backgroundColor" name="YP Black (iOS)"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstItem="gbN-YG-Pom" firstAttribute="leading" secondItem="QTm-S8-pHL" secondAttribute="leading" constant="16" id="16b-1H-yJA"/>
                            <constraint firstItem="QTm-S8-pHL" firstAttribute="bottom" secondItem="gbN-YG-Pom" secondAttribute="bottom" constant="90" id="2rq-ve-dZb"/>
                            <constraint firstItem="e3j-Y9-kfM" firstAttribute="centerY" secondItem="oeF-GH-6Gi" secondAttribute="centerY" id="3Ab-e4-2xG"/>
                            <constraint firstItem="e3j-Y9-kfM" firstAttribute="centerX" secondItem="oeF-GH-6Gi" secondAttribute="centerX" id="KHX-3b-W13"/>
                            <constraint firstItem="QTm-S8-pHL" firstAttribute="trailing" secondItem="gbN-YG-Pom" secondAttribute="trailing" constant="16" id="ywU-f8-cVg"/>
...
